objects/ASI_CRM_CN_T1_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Inventory_Date__c</fullName>
        <label>Inventory Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>T1 Inventories</relationshipLabel>
        <relationshipName>T1_Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>T1 Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_CN_WS__c</columns>
        <columns>ASI_CRM_CN_Qty__c</columns>
        <columns>ASI_CRM_CN_Inventory_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TI{000000}</displayFormat>
        <label>T1 Inventory Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T1 Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>